# senogenic-vs-robustness

./: .gitignore  README.md  pyproject.toml  requirements.txt
analysis/: README.md  __init__.py
data/: population-with-un-projections.csv  world_births_1830_2000_estimated.csv
docs/: methods_log.md  repo_update_workflow.md  reviewer_comments.md
results/: IDL_COMPLETE_Death_105.xlsx  allele_table.csv  baseline_results.pkl  fedichev_hetero_results.pkl  fedichev_model_steepness_longevity_data.pkl  gamma_factor_sweep.pkl  hard_bio_results.pkl  idl_clean_110.csv  joint_shared_eta_beta_epsilon_60_100_fit_2019_summary.json  joint_shared_eta_beta_epsilon_60_100_methods.md  joint_shared_eta_beta_epsilon_65_100_n100k_fit_2019_ci.csv  joint_shared_eta_beta_epsilon_65_100_n100k_fit_2019_summary.json  joint_shared_eta_beta_epsilon_65_100_n100k_methods.md  joint_shared_eta_beta_epsilon_65_100_n100k_swe_tail90_usa_refit_2019_summary.json  joint_shared_eta_beta_epsilon_65_100_n100k_swe_tail90_usa_refit_methods.md  joint_shared_eta_beta_epsilon_65_100_n100k_tail90_fit_2019_ci.csv  joint_shared_eta_beta_epsilon_65_100_n100k_tail90_methods.md  max_lifespan_Xc_factors_1.00to1.50_top50_n10000000_repeats1.pkl  max_lifespan_Xc_factors_1.00to1.50_top50_n10000000_repeats1_both_dists.pkl  maximum_lifespan_results.csv  nhanes_exposure_points_counts_with_alcohol.csv  nhanes_exposure_score_band_counts_with_alcohol.csv  nhanes_exposure_score_bands_stats_with_alcohol_from40_normalized_to_usa2019.csv  param_hetero_results_sweden.pkl  param_variation_results_sweden_cohort_1900.pkl  progeria_data.pkl  (+5 more)
(+399 files in other folders)
