[project]
name = "senogenic-vs-robustness"
version = "0.1.0"
description = "Analysis code and figure reproduction for senogenic versus robustness mechanisms in human lifespan."
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ageing_packages*", "senogenic_vs_robustness*"]
